# meal-orchestrator

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  prompt.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: app.example.yaml  users.example.yaml
docs/: architecture.md
prompts/: example.md
src/meal_orchestrator/: __init__.py  artifacts.py  cli.py  http.py  orchestrator.py  prompt_builder.py  retries.py  services.py  workflow.py
src/meal_orchestrator/config/: __init__.py  loader.py  models.py
src/meal_orchestrator/delivery/: __init__.py  base.py  discord.py  email.py
src/meal_orchestrator/domain/: __init__.py  dates.py  models.py
src/meal_orchestrator/llm/: __init__.py  openrouter.py
src/meal_orchestrator/observability/: __init__.py  logging.py
src/meal_orchestrator/providers/: __init__.py  base.py  example_provider.py  facade.py
src/meal_orchestrator/providers/example_provider/: __init__.py  (+2 more)
tests/fixtures/: provider_menu_raw.json
tests/fixtures/ntfy/: canonical_offer6_week_2026-06-29.json  raw_offer6_2026-06-29.json  raw_offer6_2026-06-30.json  raw_offer6_2026-07-01.json  raw_offer6_2026-07-02.json  raw_offer6_2026-07-03.json
tests/unit/: helpers.py  test_artifacts.py  test_config_loader.py  test_dates.py  test_discord_client.py  test_email_client.py  test_normalizer_example_provider.py  test_normalizer_ntfy.py  test_ntfy_client.py  test_ntfy_provider_adapter.py  test_openrouter.py  test_orchestrator.py  test_prompt_builder.py  test_provider_facade.py  test_retries.py  test_workflow.py
(+3 files in other folders)
